--- a/src/style.css
+++ b/src/style.css
@@ -11326,3 +11326,11 @@ section#contact form#contactForm :-ms-input-placeholder {
         background-color: #212529;
     }
 }
+
+.buttoncolor{
+  background-color: #DBB933;
+}
+
+#mainNav{
+  padding-top: 0rem;
+}
