purse add, view

--- a/src/style.css
+++ b/src/style.css
@@ -11330,3 +11330,7 @@ section#contact form#contactForm :-ms-input-placeholder {
 #mainNav{
   padding-top: 0rem;
 }
+
+.pursereview{
+  width: 100px;
+}
